feat: add new elements at index.html, style.css, cv.md

--- a/style.css
+++ b/style.css
@@ -1,1 +1,8 @@
-/* comment */
+* {
+    box-sizing: border-box;
+}
+
+body {
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
